deps/chakrashim/core/test/es6/supersyntax02.baseline
SyntaxError: Invalid use of the 'super' keyword
	at code (supersyntax02.js:7:6)
